<resources>
    <string name="app_name">WiIdeas</string>
    <string name="action_settings">A Propos</string>
    <string name="Remove">EFFACER</string>
    <string name="Send">ENVOYER</string>
    <string name="Add">AJOUTER</string>
    <string name="Img">IMAGE</string>
    <string name="welcomeToWildeas">WELCOME TO WILDEAS</string>
    <string name="enterName">NOM</string>
    <string name="enter">ENTRER</string>
    <string name="title">Titre :</string>
    <string name="description">Description :</string>
    <string name="picture">Image Descriptive</string>
    <string name="descriptionAboutUs">Description About Us</string>
    <string name="email">E-mail :</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="add_activity_title">Ajouter une idée</string>
    <string name="about_us_title">A propos de nous</string>
    <string name="idea_description_title">Idea Description</string>
    <string name="TextViewAboutUs">Nous sommes une équipe de jeune codeur à votre disposition pour toutes vos demandes d\'informations </string>
</resources>
